--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,24 @@
 apply plugin: 'eclipse'
 
-configurations {
-    lessClasspath
-}
+configurations { lessClasspath }
 
 dependencies {
-	lessClasspath files('lib/lesscss-engine-ant-1.0.41.jar')
-    lessClasspath group: 'rhino', name: 'js', version: '1.7R2'
-	lessClasspath group: 'commons-logging', name: 'commons-logging', version: '1.1.1'
+	lessClasspath group: 'org.lesscss', name: 'lesscss-ant', version: '1.0.0-SNAPSHOT'
 }
 
 repositories {
-    mavenCentral()
+	mavenLocal()
+	mavenCentral()
 }
 
-task lesscss << {
-    ant.taskdef(name: 'compileLess', classname: 'com.asual.lesscss.LessEngineTask', classpath: configurations.lessClasspath.asPath)
-    ant.compileLess(input:  "${projectDir}/less/cfl4tb.less", output: "${projectDir}/src/assets/css/cfl4tb.css") {
-    }
+task lesscss {
+	srcFile = file("${projectDir}/less/cfl4tb.less")
+	destFile = new File("${projectDir}/src/assets/css/cfl4tb.css")
+	inputs.file srcFile
+	outputs.file destFile
+	doLast {
+		ant.taskdef(name: 'compileLess', classname: 'org.lesscss.LessCompilerTask', classpath: configurations.lessClasspath.asPath)
+		ant.compileLess(input:  srcFile, output: destFile, compress: 'true') {
+		}
+	}
 }
